# HomeInventory

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
assets/: main.css
frontend/: index.html
migrations/2024-07-08-195609_create_locations/: up.sql
src/: main.rs  models.rs  schema.rs
templates/: index.html  location.html
