[package]
name = "HomeInventory"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = "0.9.3"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
askama = "0.12.1"
diesel = { version = "2.2.1", features = ["postgres"] }
dotenvy = "0.15.7"
